# fastvoted-reddit-bot

./: .env.template  .gitignore  Cargo.toml  Dockerfile.arm64v8  Dockerfile.armv7  Dockerfile.armv8  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: armv7-docker-image.yml
debian/: fastvoted_reddit_bot.service
src/: config.rs  main.rs  reddit.rs  reddit_models.rs
