[package]
name = "fastvoted_reddit_bot"
version = "0.1.0"
authors = ["Matt Blessed <m@ttblessed.com>"]
edition = "2018"
[[bin]]
name = "fastvoted_reddit_bot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
tokio = { version = "0.2.22", features = ["full", "time", "sync"] }
serde = { version = "1.0.114", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.57"
serde_derive = "1.0.114"
url = "2.1.1"
regex = "1.3.9"
log = "0.4.11"
env_logger = "0.7.1"
html-escape = "0.2.6"

[package.metadata.deb]
maintainer-scripts = "debian"
# I believe the following documentation is wrong about defaults
# https://github.com/mmstick/cargo-deb/blob/master/systemd.md
systemd-units      = { enable = true, start = true, restart-after-upgrade = true, stop-on-upgrade = true }
